// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expose the correct methods 1`] = `
Object {
  "adapterType": "gs",
  "getFile": [Function],
  "getJson": [Function],
  "getUrl": [Function],
  "isValid": [Function],
  "listSubDirectories": [Function],
  "maxConcurrentRequests": 20,
  "putDir": [Function],
  "putFile": [Function],
  "putFileContent": [Function],
}
`;

exports[`test getFile path/not-a-json.json 1`] = `
Object {
  "code": undefined,
  "msg": "Cannot read property 'toString' of undefined",
}
`;

exports[`test getFile path/not-a-json.json 2`] = `undefined`;

exports[`test getFile path/not-found.json 1`] = `
Object {
  "code": "file_not_found",
  "msg": undefined,
}
`;

exports[`test getFile path/not-found.json 2`] = `undefined`;

exports[`test getFile path/not-found.txt 1`] = `
Object {
  "code": "file_not_found",
  "msg": "File \\"path/not-found.txt\\" not found",
}
`;

exports[`test getFile path/not-found.txt 2`] = `undefined`;

exports[`test getFile path/test.json 1`] = `
Object {
  "code": undefined,
  "msg": "Cannot read property 'toString' of undefined",
}
`;

exports[`test getFile path/test.json 2`] = `undefined`;

exports[`test getFile path/test.txt 1`] = `[TypeError: Cannot read property 'toString' of undefined]`;

exports[`test getFile path/test.txt 2`] = `undefined`;

exports[`test getUrl  1`] = `"/test/1.0.0/test.js"`;

exports[`test listObjects when bucket is not empty for folder components/image/ 1`] = `undefined`;

exports[`test listObjects when bucket is not empty for folder components/image/ 2`] = `
Object {
  "code": "dir_not_found",
  "msg": "Directory \\"components/image/\\" not found",
}
`;

exports[`test listObjects when bucket is not empty for folder components/image/ 3`] = `undefined`;

exports[`test put dir (failure) 1`] = `
Object {
  "code": undefined,
  "msg": "getClient(...).bucket(...).file(...).makePublic is not a function",
}
`;
